--- a/css/style.css
+++ b/css/style.css
@@ -82,18 +82,6 @@ textarea, input, select {
   margin-top: 10px;
 }
 
-.close-button {
-  color: #aaa;
-  float: right;
-  font-size: 24px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close-button:hover {
-  color: #000;
-}
-
 .clear-btn {
   position: absolute;
   right: 8px;
@@ -113,14 +101,14 @@ textarea, input, select {
   position: relative;
   display: inline-block;
   margin-left: 5%; /* align to the left */
+  margin-right: 5%;
 }
 
 .filter-wrapper input {
-  padding: 0.5rem 2rem 0.5rem 0.5rem; /* space for the clear button on the right */
-  font-size: 16px;
-  width: 250px;
-  max-width: 50vw; /* at most 50% of viewport width */
-  box-sizing: border-box; /* to ensure padding doesn't overflow */
+  flex: 1;                  /* expand if space allows */
+  min-width: 100px;         /* don’t shrink too small */
+  max-width: 40vw;          /* at most 20% of viewport width */
+  box-sizing: border-box;
 }
 
 .modal {
