--- a/css/style.css
+++ b/css/style.css
@@ -263,3 +263,13 @@ button.waiting {
   border-radius: 4px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
+
+.settings-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.settings-table th, .settings-table td {
+  border-bottom: 1px solid #ddd;
+  padding: 6px;
+  text-align: center;
+}
