support add/edit/delete/show/hide for buttons & columns

--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,9 @@ button.waiting {
   #countdown {
     font-size: 4rem; /* shrink on phones */
   }
+  .modal-content {
+    max-height: 80vh;
+  }
 }
 
 .langOption {
